<resources>
    <string name="app_name">QuickRepair</string>
    <string name="title_login">Login Now</string>
    <string name="login_button">Login</string>
    <string name="login_type_switch_customer">Customer account</string>
    <string name="login_type_switch_merchant">Merchant account</string>
    <string name="input_phone">Input your phone number</string>
    <string name="input_password">Input the Verification</string>
    <string name="get_verification">Get Verification</string>
    <string name="not_valid_phone_number">Not valid phone number</string>
    <string name="not_valid_input">Phone number or Verification not valid</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_talk">Talk</string>
    <string name="title_about_me">About me</string>
    <string name="title_activity_login">Login</string>
    <string name="verification_send_successed">Verification code just send to your phone</string>
    <string name="login_successsed">Login successed</string>
    <string name="have_not_login">Have not login</string>
    <string name="add_order">Add order</string>

    <string name="order_detail_descrip">Details</string>
    <string name="select_appliance_type">Select Appliance type</string>
    <string name="order_merchant_choose">Choose a merchant</string>
    <string name="submit_order">Submit order</string>
    <string name="add_images">Add images</string>
    <string name="login_failed_title">Login failed</string>
    <string name="login_failed_no_such_account">No such an account</string>
    <string name="login_failed_ok_button">OK</string>
    <string name="login_failed_wrong_password">Password wrong</string>
    <string name="spinner_data_not_received">Wait for receiving Merchant and Appliance list</string>
    <string name="spinner_data_empty">Get empty list, can not submit</string>
    <string name="about_me_register_service">Register provide service</string>

    <string name="order_detail_here">Enter detail descrip</string>
    <string name="selectDistance">Input repair distance</string>
    <string name="supportAppliances">Support appliances list(use \';\' to split)</string>
    <string name="submitRegisterService">Submit</string>
    <string name="distacUnit">M</string>
    <string name="address_descrip">Address information</string>
    <string name="address_descrip_input">Input address</string>
    <string name="submit_done">Submit successed</string>
    <string name="order_state">Order state:</string>
    <string name="order_state_unreceived">Unreceived</string>
    <string name="order_state_received">Received</string>
    <string name="order_state_repairing">Repairing</string>
    <string name="order_state_paying">Paying</string>
    <string name="order_state_finished">Finished</string>
    <string name="order_state_rejected">Rejected</string>
    <string name="order_submit_date">Submit date:</string>
    <string name="order_start_repair_date">Start repair date:</string>
    <string name="order_end_repair_date">End repair date:</string>
    <string name="order_pay_date">Pay date:</string>
    <string name="order_finish_date">Finish date:</string>
    <string name="order_reject_date">Reject date:</string>
    <string name="order_accept_date">Accept date:</string>
    <string name="appliance_type">Appliance type:</string>
    <string name="detail_descrip">Detail descrip:</string>
    <string name="order_time">Order time:</string>
    <string name="order_accept">Accept</string>
    <string name="order_start_repair">Start repair</string>
    <string name="order_end_repair">End repair</string>
    <string name="order_pay">Pay now</string>
    <string name="order_reject">Reject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="transaction_price">Transaction</string>
    <string name="transaction_here">Input transaction</string>
    <string name="logout_button">Logout</string>
    <string name="logout_successed_text">Logout successed</string>
    <string name="account_string">Account</string>
    <string name="password_string">Password</string>
    <string name="account_type_string">Account type</string>
    <string name="new_order_coming">There is a new order</string>
    <string name="title_order_list">Orders</string>
    <string name="nearby_mechants">Nearby Merchants</string>
    <string name="city_name">City</string>
    <string name="search_bar">Search</string>
    <string name="id_string" translatable="false">ID</string>
    <string name="merchant_list_name">Merchant List</string>
    <string name="title_account_detail">Account Detail</string>
    <string name="title_merchant_detail">Merchant</string>
    <string name="title_order_detail">Order Detail</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
