<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".UI.RegisterServiceFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textView6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="10dp"
				android:text="@string/selectDistance" />

			<EditText
				android:id="@+id/distanceEditText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="10dp"
				android:ems="10"
				android:inputType="number" />

			<TextView
				android:id="@+id/textView5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/distacUnit" />
		</LinearLayout>

		<TextView
			android:id="@+id/textView7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/supportAppliances" />

		<EditText
			android:id="@+id/supportAppliancesEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textMultiLine" />

		<Button
			android:id="@+id/submit_register_service"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/submitRegisterService" />

	</LinearLayout>
</FrameLayout>