<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkYellow"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:text="@string/city_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/radius_with_no_border"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_search" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/search_bar" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:src="@android:drawable/ic_menu_add" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/radius_with_no_border"
            android:layout_margin="@dimen/default_gap">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_menu_help"
                    android:gravity="center_horizontal"
                    android:text="News" />
                <TextView
                    android:id="@+id/nearbyMerchantTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_input_get"
                    android:gravity="center_horizontal"
                    android:text="@string/nearby_mechants" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</FrameLayout>